--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
+  geolocator: ^9.0.2
+  google_maps_flutter: ^2.2.3
   http: ^0.13.5
   image_picker: ^0.8.6
+  permission_handler: ^10.2.0
   provider: ^6.0.5
 
 dev_dependencies:
